# Vibequake

./: CHANGELOG.md  LICENSE  PROJECT_SUMMARY.md  README.md  build_wheel.py  demo.py  index.html  openapi.json  pyproject.toml
examples/: basic_usage.py
src/vibequake/: __init__.py  api.py  cli.py  core.py  utils.py
tests/: __init__.py  test_core.py
